--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,6 @@
     <div id="negotiationView"></div>
     
     <script src="js/app/models/negotiation.js"></script>
-    <script src="js/app/controllers/negotiation-controller.js"></script>
     <script src="js/app/helpers/date-helper.js"></script>
     <script src="js/app/models/negotiation-list.js"></script>
     <script src="js/app/views/view.js"></script>
@@ -59,7 +58,9 @@
     <script src="js/app/helpers/bind.js"></script>
     <script src="js/app/services/negotiation-service.js"></script>
     <script src="js/app/services/http-service.js"></script>
-    <script src="js/app/controllers/negotiation-controller.js">
+    <script src="js/app/controllers/negotiation-controller.js"></script>
+
+    <script>
         const negotiationController = new NegotiationController();
     </script>
     
